--- a/Asset/style.css
+++ b/Asset/style.css
@@ -11,5 +11,16 @@ nav {
 }
 
 footer {
-    background-color: grey;
+    background-color: gray;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 75px;
+    width: 100%;
+}
+
+body {
+    background: url(https://cdn.pixabay.com/photo/2016/11/29/05/45/astronomy-1867616__340.jpg)
+    no-repeat center fixed;
+    background-size: cover;
 }
