--- a/Asset/style.css
+++ b/Asset/style.css
@@ -7,14 +7,11 @@
 }
 
 nav {
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    padding-bottom: 50px;
+    font-family: Arial, Helvetica, sans-serif
 }
 
-
-
 .footer {
-    background-color: gray;
+    background-color: goldenrod;
     position: absolute;
     left: 0;
     bottom: 0;
@@ -23,7 +20,7 @@ nav {
 }
 
 body {
-    background: url(https://cdn.pixabay.com/photo/2016/11/29/05/45/astronomy-1867616__340.jpg)
+    background: url(https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/screen-shot-2020-04-07-at-10-52-45-am-1586281979.png)
     no-repeat center fixed;
     background-size: cover;
 }
@@ -31,3 +28,4 @@ body {
 meta {
     display: none;
 }
+
