--- a/Asset/style.css
+++ b/Asset/style.css
@@ -5,9 +5,9 @@
 }
 
 
-.footer {
+footer {
     background-color: goldenrod;
-    position: absolute;
+    position: fixed;
     left: 0;
     bottom: 0;
     height: 50px;
